# scalar

./: .gitignore  Dockerfile  README.md  api.py  env.py  graders.py  inference.py  models.py  openenv.yaml  parse_debug.py  pyproject.toml  requirements.txt  space.yaml  task_evaluators.py
server/: app.py
tasks/: easy.json  hard.json  medium.json
