[project]
name = "scalarproject-rl"
version = "0.1.0"
description = "Cloud Cost Architect RL environment"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.4.0",
    "openai>=1.3.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
